Added simple routing notes.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -25,7 +25,7 @@
 
     ![Split View DNS](images/R53SplitView.png)
 
-## Route CNAME vs ALIAS
+## Route 53 CNAME vs ALIAS
 
 - In DNS an `A` records maps a `NAME` to an IP address, while a `CNAME` record maps a `NAME` to another name (example: `example.io` => `1.3.3.7` and `www.example.io` => `example.io`)
 - We cannot use a `CNAME` for the apex domain
@@ -36,3 +36,10 @@
 - There is no charge for `ALIAS` requests pointing to an AWS resource
 - An `ALIAS` record is a subtype, we can have `A` record alias and a `CNAME` record alias
 - The `ALIAS` record is a record implement by AWS and it falls outside of the DNS standard
+
+## Route 53 Simple Routing
+
+- Simple routing starts with a hosted zone
+- With simple routing we can create one record per name
+- Each record can have multiple values. For the client these records are returned and the client can chose one by random
+- Limitation of simple routing is that it does not support health checks
