Added health check notes and few routing policies.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -1,6 +1,6 @@
 # Route 53
 
-## Route 53 Public Hosted Zones
+## Public Hosted Zones
 
 - A hosted zone is a DNS database for a given section of the global DNS database
 - Route 53 is a globally resilient service. The nameservers are distributed globally and have the same dataset
@@ -15,7 +15,7 @@
 - From the VPC the access method is direct, the VPC resolver using the VPC +2 address
 - From the public internet, we access the root zones first and proceed to walk the tree to get the IP for the DNS
 
-## Route 53 Private Hosted Zones
+## Private Hosted Zones
 
 - Private hosted zones are similar to public hosted zones, but they are not public to the whole internet
 - They are associated with VPCs, they can be only access within these VPCs
@@ -25,7 +25,7 @@
 
     ![Split View DNS](images/R53SplitView.png)
 
-## Route 53 CNAME vs ALIAS
+## CNAME vs ALIAS
 
 - In DNS an `A` records maps a `NAME` to an IP address, while a `CNAME` record maps a `NAME` to another name (example: `example.io` => `1.3.3.7` and `www.example.io` => `example.io`)
 - We cannot use a `CNAME` for the apex domain
@@ -37,9 +37,49 @@
 - An `ALIAS` record is a subtype, we can have `A` record alias and a `CNAME` record alias
 - The `ALIAS` record is a record implement by AWS and it falls outside of the DNS standard
 
-## Route 53 Simple Routing
+## Simple Routing
 
 - Simple routing starts with a hosted zone
 - With simple routing we can create one record per name
 - Each record can have multiple values. For the client these records are returned and the client can chose one by random
 - Limitation of simple routing is that it does not support health checks
+
+## Health Checks
+
+- Health checks are separate from, but they are used by records
+- We configure them separately from records, they are used to evaluate the health of a 
+- Health checks are performed by a fleet of health checkers globally, we need to allow them
+- They can be used to check anything (not just AWS instances) on the internet
+- Health checks are performed every 30s, we can have more granular health checks (at every 10s) at extra cost
+- Checks can be TCP, HTTP/HTTPS (target should respond with a 200/300 status within 2 seconds), HTTP/HTTPS with String Matching (response body should also be received within 2 seconds)
+- Based on these health checks and endpoint can be `Healthy` or `Unhealthy`
+- Checks can be on these 3 types:
+    - Endpoint checks: assess the health of an actual endpoint
+    - CloudWatch Alarm: react to CloudWatch Alarms
+    - Checks of other checks - calculated: monitors the application as a whole, involves the health status of individual app components
+
+## Failover Routing
+
+- With failover routing we can add multiple routing of the same name (primary and secondary)
+- Each of these records points at a resource
+- A common architecture is a to use failover for a "out of band" failure/maintenance page for a service
+- Failover routing involves the presence of a health check
+- If the target of the health check is healthy, the primary record is used, otherwise the traffic is directed to the secondary target
+- Use case: active/passive failover
+
+## Multi Value Routing
+
+- It is a mixture of simple and failover routing
+- With multi value routing we can create many records all with the same name
+- Each of the records can have an associated health checks, when queried, up to 8 healthy records are returned to the client. If more than 8 exist, 8 are randomly selected
+- Any of the record which fails the checks, wont be returned to the client and wont be selected to route traffic to
+- Multi value routing is not a substitute for a load balancer, but it can improve the availability of the application by letting the client chose to which IP to connect
+
+## Weighter Routing
+
+- Can be used when we are looking for a simple form of load balancing or when we want to test new versions of a software
+- With weighted routing we can specify a weight to each record
+- For a given name, the total name is calculated. Each record will be returned based on its weighting compared to total weight
+- Setting a record weight to 0, the record will never be returned
+- Weighted routing can be combined with health checks
+- **Health checks don't remove records from the calculation!** If an unhealthy record is selected, the selection will be retried until we get a healthy record
