Added more routing policies and R53 interoperability.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -83,3 +83,53 @@
 - Setting a record weight to 0, the record will never be returned
 - Weighted routing can be combined with health checks
 - **Health checks don't remove records from the calculation!** If an unhealthy record is selected, the selection will be retried until we get a healthy record
+
+## Latency-Based Routing
+
+- Should we used when we try to optimise for performance and user experience
+- We have multiple records with the same name, for each record we can specify an AWS region, where the infrastructure for that record is located
+- In the background AWS maintains a latency database between different regions of the world. For example, it will know if an user from Australia has a certain latency to ap-southeast-2 and other latency to us-east-1, us-west-1, etc.
+- The record with the lowest latency is selected and returned to the user
+- It can be combined with health checks, if the lowest latency record is unhealthy, the record with the lower latency is returned from the other existing ones
+- The database maintained by AWS is not real-time, it can not take in consideration any local issues with the network which
+
+## Geolocation Routing
+
+- Geolocation routing is similar to latency-based routing, only instead of latency the location of customer and resources is used to determine the resolution decisions
+- When we create records, we tag the records with a location
+- This location is generally a country (ISO2 code), continent or default. There can be also a subdivision, in USA we can tag records with a state
+- When the user does a query, an IP checks verifies the location is the user
+- Geolocation does not return the closest record, it returns relevant records: when the resolution happens, the location of the user is cross-checked with the location specified for the records and the matching on is returned
+- Order of the cross-checks is the following:
+    1. R53 checks the state (US only)
+    2. R53 checks the country
+    3. R53 checks the continent
+    4. Returns default if not previous match
+- If no match is detected, the a `NO ANSWER` is returned
+- Geolocation is ideal for restricting content based on the location of the user
+- It can be used for load-balancing based on user location as well
+
+## Geoproximity Routing
+
+- Geoproximity aims to provide records as close to the customer as possible, aims to calculated the distance between to record and customer and return the record with the lower one
+- When using geoproximity, we define rules:
+    - Region the resource is created in if it is an AWS resource
+    - Lat/lon coordinate for external resources
+    - Bias
+- Geoproximiy allows defining a bias: it can be a `+` or `-` bias, increasing or decreasing the region size. We can influence the routing distance based on this bias
+
+## R53 Interoperability
+
+- Route53 acts as a domain registrar and as a domain hosting
+- We can also register domains using other external services
+- Steps happening when we register a domain using R53:
+    - R53 accepts the registration fee
+    - Allocates 4 Name Servers
+    - Creates a zone file (domain hosting) on the NS
+    - R53 communicates with the registry of the top level domain and adds the address of the 4 NS for the given domain
+- Route53 acting as a registrar only:
+    - We pay for the domain for Route53 but the name servers are allocated by other entity
+    - We have to allocate the name servers to Route53 which will communicate with the top level domain registry
+- Using Route53 for hosting only:
+    - Generally used for existing domains. The domain is registered at third party
+    - We create a hosted zone inside R53 and provide the address of the name servers to the third party
