Added VPC advanced DNS notes.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -133,3 +133,27 @@
 - Using Route53 for hosting only:
     - Generally used for existing domains. The domain is registered at third party
     - We create a hosted zone inside R53 and provide the address of the name servers to the third party
+
+## Advanced VPC DNS and DNS Endpoints
+
+- In every VPC the VPC +2 IP address is reserved for the DNS
+- In every subnet the +2 is reserved for R53 resolver
+- Via this address VPC resources can access R53 public and associated private hosted zones
+- R53 resolver is only accessible from the VPC, hybrid network integration is problematic both inbound and outbound
+
+    [Isolated DNS Environments](images/Route53Endpoints1.png)
+
+- Solution to the problem before R53 endpoints were introduced:
+
+    ![Before Route53 Endpoints](images/Route53Endpoints2.png)
+
+- R53 endpoints:
+    - Are deliver as VPC interfaces (ENIs) which can be accessed over VPN or DX
+    - 2 different type of endpoints:
+        - Inbound: on-premises can forward request to the R53 resolver
+        - Outbound: interfaces in multiple subnets used to contact on-premises DNS
+        - Rules control what requests are forwarded
+        - Outbound endpoints have IP addresses assigned which can be whitelisted on-prem
+- R53 endpoint architecture:
+
+    ![Route53 Endpoints Architecture](images/Route53Endpoints3.png)
