Correction for image.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -141,7 +141,7 @@
 - Via this address VPC resources can access R53 public and associated private hosted zones
 - R53 resolver is only accessible from the VPC, hybrid network integration is problematic both inbound and outbound
 
-    [Isolated DNS Environments](images/Route53Endpoints1.png)
+    ![Isolated DNS Environments](images/Route53Endpoints1.png)
 
 - Solution to the problem before R53 endpoints were introduced:
 
