Finished R53. Added CDN section. Added S3 access points.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -157,3 +157,5 @@
 - R53 endpoint architecture:
 
     ![Route53 Endpoints Architecture](images/Route53Endpoints3.png)
+
+- R53 endpoints are delivered as a service, they scale automatically, they are highly available, they can handle around 10k queries per service per endpoint
