--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -159,3 +159,20 @@
     ![Route53 Endpoints Architecture](images/Route53Endpoints3.png)
 
 - R53 endpoints are delivered as a service, they scale automatically, they are highly available, they can handle around 10k queries per service per endpoint
+
+## Implementing DNSSEC with Route53
+
+- DNSSEC can be enabled form the console and from the CLI
+- Once initiated, the process starts with KMS, an asymmetric key pair is required/created within KMS
+- The key-signing keys (KSK) is created from this KMS key, both the public and private ones which will be used by R53. These keys need to be in us-east-1
+- Next, R53 creates the zone-signing keys (ZSK) internally
+- Next, R53 adds the KSK and zone-signing key public parts into a DNS key record within the hosted zone, this tells every DNSSEC resolver which public keys to use to verify signatures on any other records
+- The private key signing key used to sign those DNS key records and create the RRSIG and DNSKEY records
+- At this point signing is configured (step 1)
+- Next, R53 has to establish the chain of trust with the parent zone
+- The parent zone needs ot add a DS record, which is hash of the public part of the KSK
+- If the domain was registered with R53, the AWS console or the CLI can be used to make this change. R53 will liaise with the appropriate top-level domain and add the delegated sign record
+- If the domain was created externally, we will have to add this record manually
+- Once done, the top level domain will trust this domain with the delegated sign record (DS)
+- The domain zone will sign each record either with the KSK or with the ZSK
+- When enabling DNSSEC we should make sure we configure CloudWatch Alarms, specifically create alarms for `DNSSECInternalFailure` and `DNSSECKeySigningKeyNeedingAction`, both of these need urgent intervention
