Random stuff before the exam.

--- a/05-r53/r53.md
+++ b/05-r53/r53.md
@@ -118,6 +118,12 @@
     - Bias
 - Geoproximiy allows defining a bias: it can be a `+` or `-` bias, increasing or decreasing the region size. We can influence the routing distance based on this bias
 
+## IP-based Routing
+
+- Routing is based on clients' IP address
+- We provide a list of CIDR ranges four our clients and the corresponding endpoints/locations (userIP-to-endpoint-mappings)
+- Use cases for IP-based routing: performance optimization, cost reductions, etc. For example we can route users from a particular ISP to a specific endpoint
+
 ## R53 Interoperability
 
 - Route53 acts as a domain registrar and as a domain hosting
@@ -176,3 +182,13 @@
 - Once done, the top level domain will trust this domain with the delegated sign record (DS)
 - The domain zone will sign each record either with the KSK or with the ZSK
 - When enabling DNSSEC we should make sure we configure CloudWatch Alarms, specifically create alarms for `DNSSECInternalFailure` and `DNSSECKeySigningKeyNeedingAction`, both of these need urgent intervention
+
+## Subdomain Zones
+
+- Route53 automatically creates NS and SOA records when we create a Hosted Zone
+- For public/private and private Hosted Zones that have overlapping namespaces, R53 Resolvers route traffic to the most specific match
+- We can create Hosted Zones for subdomains if we register the nameservers of the subdomain as NS record in the parent domain
+- This is known as "Delegation Responsibility for a Subdomain to a Hosted Zone"
+- Use cases:
+    - Different subdomains managed by different teams
+    - Restrict access using IAM permissions (we can't use IAM to control access to Route53 records)
